--- a/PyTorch_Classification.ipynb
+++ b/PyTorch_Classification.ipynb
@@ -438,7 +438,218 @@
    "id": "9fbceef5-e5de-41cb-82f0-b0f8fe48a38e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## 2.1 Setup loss function and optimizer\n",
+    "# loss function/optimizer selection is problem-specific\n",
+    "#\n",
+    "# Loss functions:\n",
+    "# E.g for regression, you might use MAE or MSE (Mean absolute error or Mean squared error)\n",
+    "# For classification, you might use binary cross entropy or categorical cross entropy (aka cross entropy)\n",
+    "#\n",
+    "# Optimizers: 2 of the most common optimizers are: SGD and Adam\n",
+    "#\n",
+    "# For the loss function, we'd use torch.nn.BCEWithLogitsLoss()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "6c009190-bfb9-4dc5-8c1c-95fde633c613",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Setup the loss function\n",
+    "# BCEWithLogitsLoss has the sigmoid activation function built-in \n",
+    "# while regular BCELoss = requires inputs to have gone through the sigmoid activation function prior to input to BCELoss\n",
+    "loss_fn = nn.BCEWithLogitsLoss() \n",
+    "\n",
+    "optimizer = torch.optim.SGD(params=model_0.parameters(),\n",
+    "                           lr=0.1)\n",
+    "\n",
+    "def accuracy_fn(y_true, y_pred):\n",
+    "    correct = torch.eq(y_true, y_pred).sum().item()\n",
+    "    accuracy = (correct/len(y_pred)) * 100\n",
+    "    return accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b4c2c81f-c83c-4c79-9bf7-42104b3864fe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Train model\n",
+    "# 1. forward pass\n",
+    "# 2. calculate loss\n",
+    "# 3. optimizer zero grad\n",
+    "# 4. loss backward (backpropagation)\n",
+    "# 5. optimizer step (gradient descent)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "5e54aedf-fa36-4456-8214-99bd9fe50ce8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[-0.1070],\n",
+       "        [-0.0104],\n",
+       "        [-0.4378],\n",
+       "        [-0.0129],\n",
+       "        [-0.5611]], device='cuda:0')"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## Going from raw logits -> prediction probabilities -> prediction labels\n",
+    "# our model outputs are going to be raw logits\n",
+    "# we can convert them into prediction probabilities by passing them to some kind of activation function \n",
+    "# (e.g. sigmoid for binary crossentropy and softmax for multiclass classification)\n",
+    "# Then we can convert our model's prediction probabilities to prediciton labels by either rounding them or taking the argmax\n",
+    "\n",
+    "# View the first 5 outputs of the forward pass on the test data\n",
+    "model_0.eval()\n",
+    "with torch.inference_mode():\n",
+    "    y_logits = model_0(X_test.to(device))[:5]\n",
+    "y_logits\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "4c748319-f8b8-42f7-b60a-94e225edc5b3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [0.]], device='cuda:0')"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Use the sigmoid activation function on our logits to convert them to prediction probabilities\n",
+    "# bc the output we have is logits (which is not the same as our regular tensor)\n",
+    "y_pred_probs = torch.sigmoid(y_logits)\n",
+    "y_pred_probs\n",
+    "torch.round(y_pred_probs) # For our prediction probability vales, we need to perform a range-style rounding on them. i.e >= 0.5 ~ 1 and 0 otherwise"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "725c22f7-ac4d-460d-9907-42fbae1b2ede",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[True, True, True, True, True],\n",
+      "        [True, True, True, True, True],\n",
+      "        [True, True, True, True, True],\n",
+      "        [True, True, True, True, True],\n",
+      "        [True, True, True, True, True]], device='cuda:0')\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0., 0., 0., 0., 0.], device='cuda:0')"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Find the predicted labels\n",
+    "y_preds = torch.round(y_pred_probs)\n",
+    "\n",
+    "# in full (logits -> pred probs -> pred labels)\n",
+    "model_0.eval()\n",
+    "with torch.inference_mode():\n",
+    "    y_pred_labels = torch.round(torch.sigmoid(model_0(X_test.to(device))[:5]))\n",
+    "\n",
+    "# Check for equality\n",
+    "print(torch.eq(y_preds.squeeze(), y_pred_labels))\n",
+    "\n",
+    "y_preds.squeeze()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3fb95d17-d172-4255-a990-32d2ad56ce50",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Building and training a test loop\n",
+    "torch.manual_seed(42)\n",
+    "torch.cuda.manual_seed(42)\n",
+    "\n",
+    "epochs = 100\n",
+    "\n",
+    "X_train, y_train = X_train.to(device), y_train.to(device)\n",
+    "X_test, y_test = X_test.to(device), y_test.to(device)\n",
+    "\n",
+    "for epoch in range(epochs):\n",
+    "    model_0.train()\n",
+    "\n",
+    "    # 1. forward-pass\n",
+    "    y_logits = model_0(X_train).squeeze()\n",
+    "    y_pred = torch.round(torch.sigmoid(y_logits)) # turn logits -> pred probs -> pred labels\n",
+    "\n",
+    "    # 2. compute loss/accuracy\n",
+    "    # loss = loss_fn(torch.sigmoid(y_logits), y_train) # if we were using nn.BCELoss, which expects prediction probabilities\n",
+    "    loss = loss_fn(y_logits, y_train) # the nn.BCEWithLogitsLoss which is our loss function expects logits and not prediction probabilities\n",
+    "    acc = accuracy_fn(y_true=y_train,\n",
+    "                     y_pred=y_pred)\n",
+    "\n",
+    "    # 3. optimizer zero grad\n",
+    "    optimizer.zero_grad()\n",
+    "\n",
+    "    # 4. loss-backwards (backpropagation)\n",
+    "    loss.backward()\n",
+    "\n",
+    "    # 5. optimizer step (gradient-descent)\n",
+    "    optimizer.step()\n",
+    "\n",
+    "    ## Testing\n",
+    "    model_0.eval()\n",
+    "    with torch.inference_mode():\n",
+    "        #1. forward pass\n",
+    "        test_logits = model_0(X_test).squeeze()\n",
+    "        test_pred = torch.round(torch.sigmoid(test_logits)))\n",
+    "\n",
+    "        # Calculate test loss/acc\n",
+    "        test_loss = loss_fn(test_logits,\n",
+    "                           y_test)\n",
+    "\n",
+    "        test_acc = accuracy_fn(y_true=y_test,\n",
+    "                              y_pred=test_pred)\n",
+    "\n",
+    "    # print out data\n",
+    "    if epoch % 10 == 0:\n",
+    "        print(f\"Epoch: {epoch} | Loss: {loss: .5f}, Acc: {acc: .2f}% | Test loss: {test_loss:.5f}, Test \")"
+   ]
   }
  ],
  "metadata": {
